# PhotoSharingApp

./: .gitignore  README.md  pyproject.toml
client/: package-lock.json  package.json
client/src/: App.css  App.jsx  api.jsx  db.js  index.css  main.jsx  routes.js
server/: .pylintrc  README.md  docker-compose.yml  main.py  pyproject.toml  test.db
server/alembic/: env.py
server/alembic/versions/: 0895ac8e730d_init.py  0d694128dc41_update_role_default_value.py  11d434165206_add_foreign_key_to_tags_pictures_table.py  14757c390e9b_update_relationships_and_add_foreign_.py  1c9e693ec98d_fix_schema_discrepancies.py  48c9b4d0a799_photos.py  598e33f712e1_initial_migration.py  5dd5be2488a5_update.py  869cbee549da_add_confirmed_field_to_user_model.py  ad090f5ad058_init.py  c496c9bda906_merge_heads.py  e537790ef1c3_photos.py  e587b55f0dba_create_comments_table.py
server/docs/: conf.py
server/docs/_build/doctrees/: environment.pickle  index.doctree
server/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
server/docs/_build/html/_sources/: index.rst.txt
server/src/: schemas.py
server/src/conf/: config.py  messages.py
server/src/database/: db.py  models.py
server/src/repositories/: photos.py
server/src/repository/: comments.py  contacts.py  photos.py  photos.py.save  users.py
server/src/routes/: admin.py  auth.py  comments.py  contacts.py  photos.py  users.py
server/src/schemas/: comments.py  contact.py  photos.py  tags.py  user.py
server/src/services/: auth.py  cloudinary.py  email.py
server/src/services/templates/: verify_email.html
server/tests/: conftest.py  test_auth.py  test_comments.py  test_repositiry_photos.py  test_routes_photos.py  utils.py
(+19 files in other folders)
