[tool.poetry]
name = "photosharingapp"
version = "0.1.0"
description = ""
authors = ["YarValeriy <147444561+YarValeriy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cloudinary = "^1.40.0"
passlib = "^1.7.4"
libgravatar = "^1.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
